fix: select on safari

--- a/src/scss/components/_searchCategory.scss
+++ b/src/scss/components/_searchCategory.scss
@@ -19,6 +19,8 @@
     }
 
     & .choices__inner {
+      position: relative;
+      z-index: 10;
       display: flex;
       align-items: center;
       padding: 0 0 0 26.6px;
@@ -68,7 +70,7 @@
       margin-top: 0;
       border: 2px solid #F7F7F7;
       border-radius: 10px;
-      z-index: -1;
+      z-index: 2;
     }
 
     & .choices__list--dropdown .choices__list, .choosing-category .choices__list[aria-expanded] .choices__list {
